--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GD Level Generator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="logo.png"/>
     <link rel="stylesheet" href="style.css"/>
     <script src="script.js"></script>
 </head>
 <body>
-    <div class="centerDiv">
 
+    <div class="centerDiv">
         <div id="topbar">
-            <h1 id="title">Geometry Dash Random Level Generator</h1>
+            <h1 id="title">Geometry Dash Level ID Generator</h1>
         </div>
 
         <br/>
@@ -30,7 +30,7 @@
 
             <div id="genID"><text id="id">00000000</text></div>
 
-            <button id="gen" onclick="gen()"><b>Generate ID</b></button>
+            <button id="gen" onclick="gen()" title="Generate ID"><b>Generate ID</b></button>
         </div>
 
         <div id="credits">Website By <a 
